<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bb3"
    android:orientation="vertical"
    tools:context=".MainPage">

    <FrameLayout
        android:id="@+id/act_mnpage_fholder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20">

    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.2"
        android:background="@drawable/bbb"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:orientation="horizontal">

            <Button
                android:id="@+id/act_mnpage_prof"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="22dp"
                android:layout_weight="1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/act_mnpage_soti"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="22dp"
                android:layout_weight="1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/act_mnpage_hame"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="22dp"
                android:layout_weight="1"
                android:textStyle="bold" />

            <Button
                android:id="@+id/act_mnpage_category"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="22dp"
                android:layout_weight="1"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.7"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/act_mnpage_p"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/profile"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act_mnpage_s"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ketabhaye_soti"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act_mnpage_h"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/hameye_ketabha"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/act_mnpage_c"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/dastebandi"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>