<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    tools:context=".Profile" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="مسعود زادفرج"
                android:textColor="@color/black"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="zadfaraj@gmail.com"
                android:textSize="15sp" />
        </LinearLayout>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.7"
            android:layout_marginTop="3dp"
            android:src="@drawable/ax1" />

    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="3dp"
            android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4.7"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button15"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:gravity="right|center_vertical"
                android:text="@string/ketabkhane_man"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:background="@color/black"/>

            <Button
                android:id="@+id/button16"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:gravity="right|center_vertical"
                android:onClick="btn_darkhaste_ketab"
                android:text="@string/darkhaste_ketab"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:background="@color/black"/>

            <Button
                android:id="@+id/button18"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:gravity="right|center_vertical"
                android:text="@string/anjomanha"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:background="@color/black"/>

            <Button
                android:id="@+id/button17"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:gravity="right|center_vertical"
                android:text="@string/taghvime_barnameha"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:background="@color/black"/>

            <Button
                android:id="@+id/button19"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:gravity="right|center_vertical"
                android:text="@string/pardakhtha"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="20dp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_action_ketabkhane" />

            <ImageView
                android:id="@+id/imageView10"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_action_darkhast" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_action_anjoman" />

            <ImageView
                android:id="@+id/imageView11"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_action_yaddasht" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_action_pardakht" />

        </LinearLayout>
    </LinearLayout>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_marginVertical="3dp"
            android:background="@color/black"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2.8"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="6"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <Button
                android:id="@+id/button11"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:gravity="right|center_vertical"
                android:text="@string/tanzimat"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:background="@color/black"/>

            <Button
                android:id="@+id/button12"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:gravity="right|center_vertical"
                android:onClick="btn_nazarat"
                android:text="@string/nazarat"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginLeft="40dp"
                android:background="@color/black"/>

            <Button
                android:id="@+id/button13"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="#00FFFFFF"
                android:gravity="right|center_vertical"
                android:onClick="btn_aboutus"
                android:text="@string/darbare"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.7"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_action_tanzimat" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_action_nazarat" />

            <ImageView
                android:id="@+id/imageView6"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:src="@drawable/ic_action_darbare" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>